# bastion

./: .env.example  .gitignore  CHANGELOG.md  CONTEXT_PRESERVATION_FIX.md  README.md  RESEARCH_AGENT_WORKFLOW_ANALYSIS.md  SECURITY_AUDIT_RLS_REPORT.md  SQL_VALIDATION_REPORT.md  TOOLS_INVENTORY.md  docker-compose.example.yml  minimal-bundled.env.example  minimal-external.env.example  validate_sql_init.py
backend/: Dockerfile  Dockerfile.celery-beat  Dockerfile.celery-flower  Dockerfile.celery-worker  Dockerfile.webdav  SECURITY_FIXES_APPLIED.md  config.py  docker-entrypoint.sh  main.py  requirements-celery-beat.txt  requirements-celery-flower.txt  requirements-celery-worker.txt  requirements-dev.txt  requirements-webdav.txt  requirements.txt  version.py  webdav_server.py
bastion_indexing/: __init__.py  policy.py
bbs-server/: Dockerfile  backend_client.py  connection_budget.py  docker-entrypoint.sh  epub_reader.py  line_input.py  main.py  menu_system.py  requirements.txt  screen_blank_guard.py  server.py  session.py  ssh_server.py  telnet_input.py
cli-worker/: Dockerfile  __init__.py  main.py  requirements-build.txt  requirements.txt
connections-service/: Dockerfile  main.py  requirements.txt
crawl4ai-service/: Dockerfile  main.py  requirements-build.txt  requirements.txt
data-service/: Dockerfile  grpc_service.py  main.py  requirements.txt
data_imports/: help_docs_sync_manifest.json
docker/: README.md  compose.qdrant-stack.yml  compose.vector-elasticsearch.yml  compose.vector-milvus.yml  compose.vector-qdrant.yml
docs/: AGENT_FACTORY.md  AGENT_FACTORY_EXAMPLES.md  AGENT_FACTORY_TECHNICAL_GUIDE.md  AGENT_FACTORY_TOOLS.md  AGENT_FACTORY_UX.md  DATA_WORKSPACE_ANALYTICS_ENHANCEMENTS.md  DEPLOYMENT.md  DOCUMENT_EDITOR_CAPABILITIES.md  IMAGE_METADATA_SCHEMA.md  OPENROUTER_EMBEDDING_IMPLEMENTATION.md  PROPOSAL_GENERATION_SYSTEM.md  SERVICES.md  TECHNICAL_HYPERSPACE_IMPLEMENTATION.md  VECTOR_STORE_BACKENDS.md  VERSION_MANAGEMENT.md  agent-factory-engineer-prompt-revision.md  outline-editor-prompt.txt  postgres-init.md
document-service/: Dockerfile  main.py  requirements.txt
electron/: main.js  package.json
frontend/: .env.example  DARK_MODE_IMPLEMENTATION.md  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  vite.config.mjs
image-vision-service/: Dockerfile  main.py  requirements.txt
llm-orchestrator/: Dockerfile  README.md  main.py  requirements.txt
local-proxy/: Cargo.toml  config.example.yml
local-proxy/debian/: bastion-proxy.service  postinst  prerm
local-proxy/src/: config.rs  daemon.rs  main.rs  policy.rs  protocol.rs  settings_window.rs  shared_state.rs  tray.rs
local-proxy/src/capabilities/: clipboard.rs  desktop_notify.rs  file_tree.rs  filesystem.rs  git_info.rs  index_workspace.rs  mod.rs  open_url.rs  processes.rs  screenshot.rs  search_files.rs  shell.rs  system_info.rs
mobile/: BUILD.md  app.config.ts  build-debug-apk.sh  eas.json  env.example  expo-notifications.d.ts  metro.config.js  (+3 more)
(+1826 files in other folders)
