[package]
name = "bastion-local-proxy"
version = "0.1.0"
edition = "2021"
description = "Local proxy daemon for Bastion - system tray, WebSocket connection, screenshot and future capabilities"
authors = ["Bastion"]
license = "MIT"

[features]
default = ["gui"]
gui = ["dep:tray-icon", "dep:muda", "dep:eframe", "dep:egui"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
xcap = "0.8"
image = "0.25"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon = { version = "0.21", optional = true }
muda = { version = "0.17", optional = true }
eframe = { version = "0.28", optional = true }
egui = { version = "0.28", optional = true }
dirs = "5"
thiserror = "1"
async-trait = "0.1"
arboard = "3"
sysinfo = "0.32"
open = "5"
regex = "1"
git2 = "0.19"

[target.'cfg(not(windows))'.dependencies]
notify-rust = "4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
tracing-appender = "0.2"
winrt-notification = "0.5"

# Debian package: `cargo deb` (after `cargo build --release --no-default-features`)
[package.metadata.deb]
name = "bastion-proxy"
maintainer = "Bastion"
section = "net"
priority = "optional"
depends = "$auto, ca-certificates"
assets = [
  ["target/release/bastion-local-proxy", "usr/bin/bastion-proxy", "755"],
  ["config.example.yml", "etc/bastion-proxy/config.yml.example", "644"],
  ["debian/bastion-proxy.service", "lib/systemd/system/bastion-proxy.service", "644"],
]
maintainer-scripts = "debian/"
